<?xml version="1.0"?>
<package>
  <name>lights_control</name>
  <version>0.0.1</version>
  <description>The lights_control package</description>
  <maintainer email="saul.cova@ieee.org">Saul Cova</maintainer>
  <author>Saul Cova</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
